--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,10 @@ spring.datasource.password=b140xx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.defer-datasource-initialization=true
 
 # Server Configuration
 server.port=8081
@@ -24,6 +23,11 @@ spring.thymeleaf.suffix=.html
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.authentication=DEBUG
+logging.level.org.springframework.security.authorization=DEBUG
 
 # Database Initialization
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=
