--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=b140xx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -28,6 +28,6 @@ logging.level.org.springframework.security.authentication=DEBUG
 logging.level.org.springframework.security.authorization=DEBUG
 
 # Database Initialization
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=
+spring.sql.init.data-locations=classpath:data.sql
